<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/brown_gray">

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/progress_bar_height"
        android:layout_marginLeft="@dimen/screen_margin_large"
        android:layout_marginRight="@dimen/screen_margin_large"
        android:max="100"
        android:progress="0"
        android:progressDrawable="@drawable/custom_progress_bar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/title"
        style="@style/Text.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/screen_margin_small"
        android:layout_marginBottom="@dimen/screen_margin"
        android:text="@string/clocking_in"
        android:textColor="@color/background"
        app:layout_constraintBottom_toTopOf="@id/progress_bar"
        app:layout_constraintLeft_toLeftOf="@id/progress_bar"
        app:layout_constraintRight_toRightOf="@id/progress_bar"/>

    <TextView
        android:id="@+id/cancel_button"
        style="@style/Text.Title"
        android:layout_marginTop="@dimen/screen_margin"
        android:layout_marginBottom="@dimen/screen_margin_small"
        android:text="@string/cancel"
        android:textColor="@color/background"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintTop_toBottomOf="@id/progress_bar"
        app:layout_constraintLeft_toLeftOf="@id/progress_bar"
        app:layout_constraintRight_toRightOf="@id/progress_bar" />

    <TextView
        android:id="@+id/clock_in_btn"
        style="@style/Text.Title"
        android:layout_margin="@dimen/screen_margin"
        android:text="@string/clock_in"
        android:textColor="@color/background"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/clock_out_btn"
        style="@style/Text.Title"
        android:layout_margin="@dimen/screen_margin"
        android:text="@string/clock_out"
        android:textColor="@color/background"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>